bdr.BDR2.scala.error
Erreur de compilation :
BDR2:13: error: '=>' expected but ';' found.
  case "F" => case "E" ;avance()
                       ^BDR2:19: error: ';' expected but '(' found.
  case "U" => recule();recule();recule();recule():recule();recule()
                                                        ^